добавить БД Н2. доработать класс user